--- a/index.html
+++ b/index.html
@@ -242,11 +242,11 @@
                     class="tw-mt-6 tw-flex tw-max-w-[450px] tw-flex-col tw-gap-4"
                 >
                     <h4 class="tw-text-xl tw-font-medium max-md:tw-text-2xl">
-                        Step 01
+                        Step 01 🎯
                     </h4>
 
                     <h3 class="tw-text-4xl tw-font-medium max-md:tw-text-2xl">
-                        Find Winning Video Ideas
+                         Find Winning Video Ideas
                     </h3>
 
                     <div class="tw-mt-4 tw-flex tw-flex-col tw-gap-3">
@@ -254,7 +254,7 @@
                             class="tw-text-lg tw-text-gray-300 max-md:tw-text-base"
                         >
                         Spark your creativity with proven success.<br>
-                        Explore a library of <strong>150,000+</strong> top-performing YouTube videos with easy-to-use filters to discover ideas that fit your channel and audience. 
+                        Explore a library of top-performing YouTube videos with easy-to-use filters to discover ideas that fit your channel and audience. 
                         Stop guessing—start making content people love.
                     </span>
                     </div>
@@ -295,7 +295,7 @@
                     class="tw-mt-6 tw-flex tw-max-w-[450px] tw-flex-col tw-gap-4"
                 >
                     <h4 class="tw-text-xl tw-font-medium max-md:tw-text-2xl">
-                        Step 02
+                        Step 02 🎨 
                     </h4>
 
                     <h3 class="tw-text-4xl tw-font-medium max-md:tw-text-2xl">
@@ -304,10 +304,10 @@
 
                     <div class="tw-mt-4 tw-flex tw-flex-col tw-gap-3">
                         <span
-                            class="tw-text-lg tw-text-gray-300 max-md:tw-text-base"
+                            class="tw-text-lg tw-text-gray-300 max-md:tw-text-base tw-break-normal"
                         >
                         Make your videos impossible to ignore.<br>
-                        Use our AI-powered tool to design stunning thumbnails in seconds. Built with insights from the best-performing images, 
+                        Use our AI-powered tool to design stunning thumbnails in seconds. Built with insights from the <strong>150,000+</strong> best-performing images, 
                         it’s your secret weapon to stand out and get noticed.
                         
                         
@@ -327,11 +327,11 @@
                     class="tw-mt-6 tw-flex tw-max-w-[450px] tw-flex-col tw-gap-4"
                 >
                     <h4 class="tw-text-xl tw-font-medium max-md:tw-text-2xl">
-                        Step 03
+                        Step 03 📊
                     </h4>
 
                     <h3 class="tw-text-4xl tw-font-medium max-md:tw-text-2xl">
-                        A/B Test Your Thumbnails & Titles Locally
+                         A/B Test Your Thumbnails & Titles Locally
                     </h3>
 
                     <div class="tw-mt-4 tw-flex tw-flex-col tw-gap-3">
@@ -380,11 +380,11 @@
                     class="tw-mt-6 tw-flex tw-max-w-[450px] tw-flex-col tw-gap-4"
                 >
                     <h4 class="tw-text-xl tw-font-medium max-md:tw-text-2xl">
-                        Step 04
+                        Step 04 🗓️
                     </h4>
 
                     <h3 class="tw-text-4xl tw-font-medium max-md:tw-text-2xl">
-                        Plan Your Video
+                         Plan Your Video
                     </h3>
 
                     <div class="tw-mt-4 tw-flex tw-flex-col tw-gap-3">
@@ -410,11 +410,11 @@
                     class="tw-mt-6 tw-flex tw-max-w-[450px] tw-flex-col tw-gap-4"
                 >
                     <h4 class="tw-text-xl tw-font-medium max-md:tw-text-2xl">
-                        Step 05
+                        Step 05 📈
                     </h4>
 
                     <h3 class="tw-text-4xl tw-font-medium max-md:tw-text-2xl">
-                        Track. Analyze. Grow.
+                         Track. Analyze. Grow.
                     </h3>
 
                     <div class="tw-mt-4 tw-flex tw-flex-col tw-gap-3">
