--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                         class="tw-max-h-[650px] tw-max-w-[850px] tw-overflow-hidden tw-rounded-lg tw-shadow-lg tw-shadow-[rgba(170,49,233,0.44021358543417366)]"
                     >
                         <img
-                            src="./assets/images/home/article2.jpg"
+                            src="./assets/images/Workflow/Find_ideas.png"
                             alt="coding"
                             class="tw-h-full tw-w-full tw-object-cover"
                         />
@@ -285,7 +285,7 @@
                         class="tw-max-h-[650px] tw-max-w-[850px] tw-overflow-hidden tw-rounded-lg tw-shadow-lg tw-shadow-[rgba(170,49,233,0.44021358543417366)]"
                     >
                         <img
-                            src="./assets/images/home/article2.jpg"
+                            src="./assets\images\Workflow\Edit.png"
                             alt="coding"
                             class="tw-h-full tw-w-full tw-object-cover"
                         />
@@ -370,7 +370,7 @@
                         class="tw-max-h-[650px] tw-max-w-[850px] tw-overflow-hidden tw-rounded-lg tw-shadow-lg tw-shadow-[rgba(170,49,233,0.44021358543417366)]"
                     >
                         <img
-                            src="./assets/images/home/article2.jpg"
+                            src="./assets/images/Workflow/Schedule your video.png"
                             alt="coding"
                             class="tw-h-full tw-w-full tw-object-cover"
                         />
