updated landing page

--- a/edit_thumbnail.html
+++ b/edit_thumbnail.html
@@ -196,17 +196,17 @@
     <script type="module">
         import { generateThumbnailWithImage } from './scripts/edit_image.js';
     
-        document.addEventListener("DOMContentLoaded", function () {
-            const generateButton = document.getElementById('generateBtn');
+        //document.addEventListener("DOMContentLoaded", function () {
+        //    const generateButton = document.getElementById('generateBtn');
     
-            if (generateButton) {
-                generateButton.addEventListener('click', function () {
-                    generateThumbnailWithImage();
-                });
-            } else {
-                console.error("Generate button not found!");
-            }
-        });
+        //    if (generateButton) {
+        //        generateButton.addEventListener('click', function () {
+        //            generateThumbnailWithImage();
+        //        });
+        //    } else {
+        //        console.error("Generate button not found!");
+        //    }
+        //});
     </script>
 <style>
     @font-face {
