--- a/index.html
+++ b/index.html
@@ -168,32 +168,32 @@
               <div class="tw-flex tw-animate-scroll-left" id="scroll-container">
                 <div class="tw-flex-shrink-0 tw-mx-4">
                   <div class="tw-bg-white tw-rounded-xl tw-overflow-hidden tw-shadow-lg tw-w-[300px]">
-                    <img src="assets/thumbnails/ancient_temple.png" alt="Image 1" class="tw-w-full tw-h-[180px] tw-object-cover">
+                    <img src="assets/thumbnails/ancient_temple.png" alt="Ancient temple" class="tw-w-full tw-h-[180px] tw-object-cover">
                   </div>
                 </div>
                 <div class="tw-flex-shrink-0 tw-mx-4">
                   <div class="tw-bg-white tw-rounded-xl tw-overflow-hidden tw-shadow-lg tw-w-[300px]">
-                    <img src="assets/thumbnails/ocean.png" alt="Image 2" class="tw-w-full tw-h-[180px] tw-object-cover">
+                    <img src="assets/thumbnails/ocean.png" alt="Ocean" class="tw-w-full tw-h-[180px] tw-object-cover">
                   </div>
                 </div>
                 <div class="tw-flex-shrink-0 tw-mx-4">
                   <div class="tw-bg-white tw-rounded-xl tw-overflow-hidden tw-shadow-lg tw-w-[300px]">
-                    <img src="assets/thumbnails/pinochio.png" alt="Image 3" class="tw-w-full tw-h-[180px] tw-object-cover">
+                    <img src="assets/thumbnails/pinochio.png" alt="Pinocchio" class="tw-w-full tw-h-[180px] tw-object-cover">
                   </div>
                 </div>
                 <div class="tw-flex-shrink-0 tw-mx-4">
                   <div class="tw-bg-white tw-rounded-xl tw-overflow-hidden tw-shadow-lg tw-w-[300px]">
-                    <img src="assets/thumbnails/helmet.png" alt="Image 4" class="tw-w-full tw-h-[180px] tw-object-cover">
+                    <img src="assets/thumbnails/helmet.png" alt="Helmet" class="tw-w-full tw-h-[180px] tw-object-cover">
                   </div>
                 </div>
                 <div class="tw-flex-shrink-0 tw-mx-4">
                     <div class="tw-bg-white tw-rounded-xl tw-overflow-hidden tw-shadow-lg tw-w-[300px]">
-                      <img src="assets/thumbnails/scary_looking_island.png" alt="Image 4" class="tw-w-full tw-h-[180px] tw-object-cover">
+                      <img src="assets/thumbnails/scary_looking_island.png" alt="Scary Looking Island" class="tw-w-full tw-h-[180px] tw-object-cover">
                     </div>
                 </div>
                 <div class="tw-flex-shrink-0 tw-mx-4"></div>
                     <div class="tw-bg-white tw-rounded-xl tw-overflow-hidden tw-shadow-lg tw-w-[300px]">
-                      <img src="assets/thumbnails/scary_looking_island.png" alt="Image 4" class="tw-w-full tw-h-[180px] tw-object-cover">
+                      <img src="assets/thumbnails/scary_looking_island.png" alt="Scary Looking Island" class="tw-w-full tw-h-[180px] tw-object-cover">
                     </div>
                 </div>
               </div>
@@ -205,27 +205,27 @@
               <div class="tw-flex tw-animate-scroll-right" id="scroll-container-right">
                 <div class="tw-flex-shrink-0 tw-mx-4">
                   <div class="tw-bg-white tw-rounded-xl tw-overflow-hidden tw-shadow-lg tw-w-[300px]">
-                    <img src="assets/thumbnails/pyramids.png" alt="Image 1" class="tw-w-full tw-h-[180px] tw-object-cover">
+                    <img src="assets/thumbnails/pyramids.png" alt="Pyramids" class="tw-w-full tw-h-[180px] tw-object-cover">
                   </div>
                 </div>
                 <div class="tw-flex-shrink-0 tw-mx-4">
                   <div class="tw-bg-white tw-rounded-xl tw-overflow-hidden tw-shadow-lg tw-w-[300px]">
-                    <img src="assets/thumbnails/running.png" alt="Image 2" class="tw-w-full tw-h-[180px] tw-object-cover">
+                    <img src="assets/thumbnails/serious.png" alt="Serious face" class="tw-w-full tw-h-[180px] tw-object-cover">
                   </div>
                 </div>
                 <div class="tw-flex-shrink-0 tw-mx-4">
                   <div class="tw-bg-white tw-rounded-xl tw-overflow-hidden tw-shadow-lg tw-w-[300px]">
-                    <img src="assets/thumbnails/panama.png" alt="Image 3" class="tw-w-full tw-h-[180px] tw-object-cover">
+                    <img src="assets/thumbnails/panama.png" alt="Panama" class="tw-w-full tw-h-[180px] tw-object-cover">
                   </div>
                 </div>
                 <div class="tw-flex-shrink-0 tw-mx-4">
                     <div class="tw-bg-white tw-rounded-xl tw-overflow-hidden tw-shadow-lg tw-w-[300px]">
-                      <img src="assets/thumbnails/plane.png" alt="Image 3" class="tw-w-full tw-h-[180px] tw-object-cover">
+                      <img src="assets/thumbnails/plane.png" alt="Plane" class="tw-w-full tw-h-[180px] tw-object-cover">
                     </div>
                 </div>
                 <div class="tw-flex-shrink-0 tw-mx-4">
                     <div class="tw-bg-white tw-rounded-xl tw-overflow-hidden tw-shadow-lg tw-w-[300px]">
-                      <img src="assets/thumbnails/football.png" alt="Image 3" class="tw-w-full tw-h-[180px] tw-object-cover">
+                      <img src="assets/thumbnails/football.png" alt="Football before-after" class="tw-w-full tw-h-[180px] tw-object-cover">
                     </div>
                 </div>
               </div>
@@ -350,7 +350,7 @@
                         class="tw-max-h-[650px] tw-max-w-[850px] tw-overflow-hidden tw-rounded-lg tw-shadow-lg tw-shadow-[rgba(170,49,233,0.44021358543417366)]"
                     >
                         <img
-                            src="./assets/images/home/article2.jpg"
+                            src="./assets/images/Workflow/generate_thumbnail.PNG"
                             alt="coding"
                             class="tw-h-full tw-w-full tw-object-cover"
                         />
@@ -433,7 +433,7 @@
                         class="tw-max-h-[650px] tw-max-w-[850px] tw-overflow-hidden tw-rounded-lg tw-shadow-lg tw-shadow-[rgba(170,49,233,0.44021358543417366)]"
                     >
                         <img
-                            src="./assets/images/home/article2.jpg"
+                            src="./assets/images/Workflow/dashboard.PNG"
                             alt="coding"
                             class="tw-h-full tw-w-full tw-object-cover"
                         />
