--- a/workflow.html
+++ b/workflow.html
@@ -248,7 +248,7 @@
 
                 transaction.oncomplete = function() {
                     console.log('Transaction completed');
-                    alert('Video saved to IndexedDB!');
+                    alert('Video uploaded!');
                 };
 
                 transaction.onerror = function(event) {
