--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                         class="tw-max-h-[650px] tw-max-w-[850px] tw-overflow-hidden tw-rounded-lg tw-shadow-lg tw-shadow-[rgba(170,49,233,0.44021358543417366)]"
                     >
                         <img
-                            src="./assets/images/Workflow/generate_thumbnail.PNG"
+                            src="./assets\images\Workflow\generateGood.png"
                             alt="coding"
                             class="tw-h-full tw-w-full tw-object-cover"
                         />
@@ -370,7 +370,7 @@
                         class="tw-max-h-[650px] tw-max-w-[850px] tw-overflow-hidden tw-rounded-lg tw-shadow-lg tw-shadow-[rgba(170,49,233,0.44021358543417366)]"
                     >
                         <img
-                            src="./assets/images/Workflow/Schedule your video.png"
+                            src="./assets\images\Workflow\ScheduleGood.png"
                             alt="coding"
                             class="tw-h-full tw-w-full tw-object-cover"
                         />
