--- a/planify_video.html
+++ b/planify_video.html
@@ -295,7 +295,7 @@
                 }
             }
 
-            const response = await fetch('http://127.0.0.1:8000/api/users/upload_video/', {
+            const response = await fetch('https://web-production-5b55f.up.railway.app/api/users/upload_video/', {
                 method: 'POST',
                 credentials: 'include', 
                 headers: {
