--- a/profile.html
+++ b/profile.html
@@ -160,7 +160,7 @@
     <script>
         async function fetchUserData() {
             try {
-                const response = await fetch('http://127.0.0.1:8000/api/users/user_profile/', {
+                const response = await fetch('https://web-production-5b55f.up.railway.app/api/users/user_profile/', {
                     method: 'GET',
                     credentials: 'include', 
                 });
