--- a/planify_video.html
+++ b/planify_video.html
@@ -222,173 +222,186 @@
             }
         }
 
-    async function scheduleVideo() {
-        const title = localStorage.getItem('videoTitle');
-        const description = localStorage.getItem('videoDescription');
-        const tags = localStorage.getItem('videoTags');
-        const selectedThumbnail = localStorage.getItem('selectedThumbnail');
-        const csrftoken = getCookie('csrftoken'); 
-
-        const formData = new FormData();
-
-        try {
-            const videoBlob = await new Promise((resolve, reject) => {
-                const request = indexedDB.open('VideoDatabase', 1);
-
-                request.onsuccess = function(event) {
-                    const db = event.target.result;
-                    const transaction = db.transaction('videos', 'readonly');
-                    const store = transaction.objectStore('videos');
-                    const getRequest = store.get('uploadedVideo');
-
-                    getRequest.onsuccess = function(e) {
-                        const videoData = e.target.result;
-                        if (videoData) {
-                            const byteString = atob(videoData.content.split(',')[1]);
-                            const mimeString = videoData.content.split(',')[0].split(':')[1].split(';')[0];
-
-                            const ab = new ArrayBuffer(byteString.length);
-                            const ia = new Uint8Array(ab);
-                            for (let i = 0; i < byteString.length; i++) {
-                                ia[i] = byteString.charCodeAt(i);
-                            }
-
-                            const blob = new Blob([ab], { type: mimeString });
-                            resolve(blob);
-                        } else {
-                            reject('Video not found in IndexedDB');
-                        }
-                    };
-
-                    getRequest.onerror = function() {
-                        reject('Failed to retrieve video from IndexedDB');
-                    };
-                };
-
-                request.onerror = function() {
-                    reject('Failed to open IndexedDB');
-                };
-            });
-
-            formData.append('video', videoBlob, 'video.mp4');
-            formData.append('title', title);
-            formData.append('description', description);
-            formData.append('tags', tags);
-
-            if (selectedThumbnail) {
-                if (selectedThumbnail.startsWith('data:image')) {
-                    const base64ToBlob = (base64) => {
-                        const [metadata, data] = base64.split(',');
-                        const mime = metadata.match(/:(.*?);/)[1];
-                        const binary = atob(data);
-                        const array = [];
-                        for (let i = 0; i < binary.length; i++) {
-                            array.push(binary.charCodeAt(i));
-                        }
-                        return new Blob([new Uint8Array(array)], { type: mime });
-                    };
-                    const thumbnailBlob = base64ToBlob(selectedThumbnail);
-                    formData.append('thumbnail', thumbnailBlob, 'thumbnail.jpg');
-                } else {
-                    const thumbnailBlob = await fetch(selectedThumbnail).then(res => res.blob());
-                    formData.append('thumbnail', thumbnailBlob, 'thumbnail.jpg');
+        function getCookie(name) {
+            const nameEQ = name + "=";
+            const ca = document.cookie.split(';'); 
+            console.log(ca)
+            for (let i = 0; i < ca.length; i++) {
+                let c = ca[i].trim();
+                if (c.indexOf(nameEQ) === 0) {
+                    return c.substring(nameEQ.length, c.length); 
                 }
             }
-
-            const response = await fetch('https://web-production-5b55f.up.railway.app/api/users/upload_video/', {
-                method: 'POST',
-                credentials: 'include', 
-                headers: {
-                    'X-CSRFToken': csrftoken, 
-                },
-                body: formData,
-            });
-
-            if (response.ok) {
-                const data = await response.json();
-                showPopup(true, `Video successfully published ! URL : ${data.video_url}`);
-            } else {
-                const error = await response.json();
-                showPopup(false, `Error publishing the video, please try again later`);
-            }
-        } catch (error) {
-            console.error('Error when publishing :', error);
-            showPopup(false, 'An error occurred when publishing the video.');
+            return null; 
         }
-    }
 
-    function showPopup(success, message) {
-        const popup = document.createElement('div');
-        popup.className = 'tw-fixed tw-inset-0 tw-flex tw-items-center tw-justify-center tw-bg-black/50 tw-z-50';
-        popup.innerHTML = `
-            <div class="tw-bg-white dark:tw-bg-[#17181b] tw-rounded-lg tw-p-8 tw-text-center tw-shadow-xl">
-                <div class="${success ? 'tw-text-green-500' : 'tw-text-red-500'} tw-mb-4">
-                    <i class="bi ${success ? 'bi-check-circle-fill' : 'bi-x-circle-fill'} tw-text-8xl"></i>
-                </div>
-                <h2 class="tw-text-2xl tw-font-semibold tw-mb-2">${success ? 'Success' : 'Error'}</h2>
-                <p class="tw-text-gray-600 dark:tw-text-gray-400 tw-mb-6">${message}</p>
-                <button onclick="document.body.removeChild(this.parentNode.parentNode)" class="tw-bg-gray-300 dark:tw-bg-gray-700 tw-px-4 tw-py-2 tw-rounded-lg">
-                    Close
-                </button>
-            </div>
-        `;
-        document.body.appendChild(popup);
-    }
-
-    document.getElementById('schedule').addEventListener('click', scheduleVideo);
-
-        // Charge l'image avant de l'afficher
-        window.onload = function() {
-            // Récupère l'image sélectionnée du localStorage
-            const selectedThumbnail = localStorage.getItem('generatedThumbnail');
-            if (selectedThumbnail) {
-                document.querySelector('.tw-aspect-video img').src = selectedThumbnail;
-            }
-
-            // Récupère et affiche le titre
+        async function scheduleVideo() {
             const title = localStorage.getItem('videoTitle');
-            if (title) {
-                document.querySelector('.tw-text-gray-600.dark\\:tw-text-gray-300').textContent = title;
-            }
-
-            // Récupère et affiche la description
             const description = localStorage.getItem('videoDescription');
-            if (description) {
-                document.querySelector('.tw-line-clamp-3').textContent = description;
-            }
-
-            // Récupère et affiche les tags
             const tags = localStorage.getItem('videoTags');
-            if (tags) {
-                const tagsContainer = document.querySelector('.tw-flex.tw-flex-wrap.tw-gap-2');
-                tagsContainer.innerHTML = ''; // Efface les tags existants
-                
-                const tagArray = tags.split(',').map(tag => tag.trim());
-                tagArray.forEach(tag => {
-                    const span = document.createElement('span');
-                    span.className = 'tw-px-3 tw-py-1 tw-bg-gray-100 dark:tw-bg-gray-800 tw-rounded-full';
-                    span.textContent = tag.startsWith('#') ? tag : '#' + tag;
-                    tagsContainer.appendChild(span);
+            const selectedThumbnail = localStorage.getItem('selectedThumbnail');
+            const csrftoken = getCookie('csrftoken'); 
+
+            const formData = new FormData();
+
+            try {
+                const videoBlob = await new Promise((resolve, reject) => {
+                    const request = indexedDB.open('VideoDatabase', 1);
+
+                    request.onsuccess = function(event) {
+                        const db = event.target.result;
+                        const transaction = db.transaction('videos', 'readonly');
+                        const store = transaction.objectStore('videos');
+                        const getRequest = store.get('uploadedVideo');
+
+                        getRequest.onsuccess = function(e) {
+                            const videoData = e.target.result;
+                            if (videoData) {
+                                const byteString = atob(videoData.content.split(',')[1]);
+                                const mimeString = videoData.content.split(',')[0].split(':')[1].split(';')[0];
+
+                                const ab = new ArrayBuffer(byteString.length);
+                                const ia = new Uint8Array(ab);
+                                for (let i = 0; i < byteString.length; i++) {
+                                    ia[i] = byteString.charCodeAt(i);
+                                }
+
+                                const blob = new Blob([ab], { type: mimeString });
+                                resolve(blob);
+                            } else {
+                                reject('Video not found in IndexedDB');
+                            }
+                        };
+
+                        getRequest.onerror = function() {
+                            reject('Failed to retrieve video from IndexedDB');
+                        };
+                    };
+
+                    request.onerror = function() {
+                        reject('Failed to open IndexedDB');
+                    };
                 });
-            }
 
-            // Récupère et affiche le nom du fichier vidéo
-            const videoFileName = localStorage.getItem('videoFileName');
-            if (videoFileName) {
-                document.getElementById('videoFileName').textContent = videoFileName;
-            }
-        };
+                formData.append('video', videoBlob, 'video.mp4');
+                formData.append('title', title);
+                formData.append('description', description);
+                formData.append('tags', tags);
 
-        document.getElementById('previous-step-button').addEventListener('click', function () {
-            const previousPage = localStorage.getItem('previous_page');
-            console.log("Previous page set to:", localStorage.getItem("previous_page"));
+                if (selectedThumbnail) {
+                    if (selectedThumbnail.startsWith('data:image')) {
+                        const base64ToBlob = (base64) => {
+                            const [metadata, data] = base64.split(',');
+                            const mime = metadata.match(/:(.*?);/)[1];
+                            const binary = atob(data);
+                            const array = [];
+                            for (let i = 0; i < binary.length; i++) {
+                                array.push(binary.charCodeAt(i));
+                            }
+                            return new Blob([new Uint8Array(array)], { type: mime });
+                        };
+                        const thumbnailBlob = base64ToBlob(selectedThumbnail);
+                        formData.append('thumbnail', thumbnailBlob, 'thumbnail.jpg');
+                    } else {
+                        const thumbnailBlob = await fetch(selectedThumbnail).then(res => res.blob());
+                        formData.append('thumbnail', thumbnailBlob, 'thumbnail.jpg');
+                    }
+                }
 
-            if (previousPage) {
-                window.location.href = previousPage;
-            } else {
-                window.location.href = 'thumbnails_generator.html';
+                const response = await fetch('https://web-production-5b55f.up.railway.app/api/users/upload_video/', {
+                    method: 'POST',
+                    credentials: 'include', 
+                    headers: {
+                        'X-CSRFToken': csrftoken, 
+                    },
+                    body: formData,
+                });
+
+                if (response.ok) {
+                    const data = await response.json();
+                    showPopup(true, `Video successfully published ! URL : ${data.video_url}`);
+                } else {
+                    const error = await response.json();
+                    showPopup(false, `Error publishing the video, please try again later`);
+                }
+            } catch (error) {
+                console.error('Error when publishing :', error);
+                showPopup(false, 'An error occurred when publishing the video.');
             }
-        });
+        }
+
+        function showPopup(success, message) {
+            const popup = document.createElement('div');
+            popup.className = 'tw-fixed tw-inset-0 tw-flex tw-items-center tw-justify-center tw-bg-black/50 tw-z-50';
+            popup.innerHTML = `
+                <div class="tw-bg-white dark:tw-bg-[#17181b] tw-rounded-lg tw-p-8 tw-text-center tw-shadow-xl">
+                    <div class="${success ? 'tw-text-green-500' : 'tw-text-red-500'} tw-mb-4">
+                        <i class="bi ${success ? 'bi-check-circle-fill' : 'bi-x-circle-fill'} tw-text-8xl"></i>
+                    </div>
+                    <h2 class="tw-text-2xl tw-font-semibold tw-mb-2">${success ? 'Success' : 'Error'}</h2>
+                    <p class="tw-text-gray-600 dark:tw-text-gray-400 tw-mb-6">${message}</p>
+                    <button onclick="document.body.removeChild(this.parentNode.parentNode)" class="tw-bg-gray-300 dark:tw-bg-gray-700 tw-px-4 tw-py-2 tw-rounded-lg">
+                        Close
+                    </button>
+                </div>
+            `;
+            document.body.appendChild(popup);
+        }
+
+        document.getElementById('schedule').addEventListener('click', scheduleVideo);
+
+            // Charge l'image avant de l'afficher
+            window.onload = function() {
+                // Récupère l'image sélectionnée du localStorage
+                const selectedThumbnail = localStorage.getItem('generatedThumbnail');
+                if (selectedThumbnail) {
+                    document.querySelector('.tw-aspect-video img').src = selectedThumbnail;
+                }
+
+                // Récupère et affiche le titre
+                const title = localStorage.getItem('videoTitle');
+                if (title) {
+                    document.querySelector('.tw-text-gray-600.dark\\:tw-text-gray-300').textContent = title;
+                }
+
+                // Récupère et affiche la description
+                const description = localStorage.getItem('videoDescription');
+                if (description) {
+                    document.querySelector('.tw-line-clamp-3').textContent = description;
+                }
+
+                // Récupère et affiche les tags
+                const tags = localStorage.getItem('videoTags');
+                if (tags) {
+                    const tagsContainer = document.querySelector('.tw-flex.tw-flex-wrap.tw-gap-2');
+                    tagsContainer.innerHTML = ''; // Efface les tags existants
+                    
+                    const tagArray = tags.split(',').map(tag => tag.trim());
+                    tagArray.forEach(tag => {
+                        const span = document.createElement('span');
+                        span.className = 'tw-px-3 tw-py-1 tw-bg-gray-100 dark:tw-bg-gray-800 tw-rounded-full';
+                        span.textContent = tag.startsWith('#') ? tag : '#' + tag;
+                        tagsContainer.appendChild(span);
+                    });
+                }
+
+                // Récupère et affiche le nom du fichier vidéo
+                const videoFileName = localStorage.getItem('videoFileName');
+                if (videoFileName) {
+                    document.getElementById('videoFileName').textContent = videoFileName;
+                }
+            };
+
+            document.getElementById('previous-step-button').addEventListener('click', function () {
+                const previousPage = localStorage.getItem('previous_page');
+                console.log("Previous page set to:", localStorage.getItem("previous_page"));
+
+                if (previousPage) {
+                    window.location.href = previousPage;
+                } else {
+                    window.location.href = 'thumbnails_generator.html';
+                }
+            });
     </script>
 </body>
 </html>
